# sharun

./: Cargo.toml  README.md  lib4bin
.github/: create_aio_sharun.sh
.github/workflows/: ci.yml
src/: apprun.rs  bwrap_wrapper.rs  gio_launch_desktop.rs  main.rs  set_appdir_env.rs  utils.rs
