cargo-features = ["panic-immediate-abort"]

[package]
name = "sharun"
version = "2.0.0"
readme = "README.md"
license = "MIT"
repository = "https://github.com/VHSgunzo/sharun"
description = "Run dynamically linked ELF binaries everywhere"
edition = "2021"

[profile.release]
lto = true
opt-level = "z"
strip = "symbols"
debug  = false
codegen-units = 1
panic = "immediate-abort"

[profile.dev]
opt-level = 0

[dependencies]
goblin = "0.8.2"
walkdir = "2.5.0"
userland-execve = "0.2.0"
nix = { version = "0.31.1", features = [ "fs" ] }
dotenv = { git = "https://github.com/VHSgunzo/dotenv.git" }
